force-app/main/default/objects/Account_Data_Change__e/Account_Data_Change__e.object-meta.xml
<CustomObject>
    <label>Account Data Change</label>
    <pluralLabel>Account Data Changes</pluralLabel>
</CustomObject>