force-app/main/default/objects/Account_Data_Change__e/fields/ChangedObject__c.field-meta.xml
<CustomField>
    <fullName>ChangedObject__c</fullName>
    <label>Changed Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>