force-app/main/default/objects/Account_Data_Change__e/fields/ChangeParentId__c.field-meta.xml
<CustomField>
    <fullName>ChangeParentId__c</fullName>
    <label>Change Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>