force-app/main/default/objects/Account_Data_Change__e/fields/ChangeTimestamp__c.field-meta.xml
<CustomField>
    <fullName>ChangeTimestamp__c</fullName>
    <label>Change Timestamp</label>
    <type>DateTime</type>
</CustomField>