force-app/main/default/objects/Account_Data_Change__e/fields/ChangeType__c.field-meta.xml
<CustomField>
    <fullName>ChangeType__c</fullName>
    <label>Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>